--- a/index.html
+++ b/index.html
@@ -8,9 +8,35 @@
     <link href="./styles/style.css" rel="stylesheet" />
   </head>
   <body>
-    <header class="header content-section content-section_theme_dark"></header>
+    <header class="header content-section content-section_theme_dark">
+      <a class="header__logo" href="#">
+        <img
+          class="eader__logo-image"
+          alt="Лого"
+          src="./images/logo.svg">
+      </a>
+      <nav class="header__menu">
+        <ul class="header__menu-list">
+          <li class="header__menu-item header__menu-item-active">
+            <a class="header__menu-link">Главная</a>
+          </li>
+          <li class="header__menu-item">
+            <a class="header__menu-link" href="#">О нас</a>
+          </li>
+          <li class="header__menu-item">
+            <a class="header__menu-link" href="#">Контакты</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
     <main class="content">
-        <section class="cover content-section content-section_theme_dark"></section>
+        <section class="cover content-section content-section_theme_dark">
+          <h1 class="cover-title">
+            <span class="accent-span">С</span>
+            <span class="accent-span text-center">чистого</span>
+            <span class="accent-span text-right">листа</span>
+          </h1>
+        </section>
         <section class="intro content-section content-section_theme_dark"></section>
         <section class="reasons content-section content-section_theme_bright"></section>
         <section class="how-to content-section content-section_theme_dark"></section>
